syntax = "proto3";

package post_service;

option go_package = "github.com/ebilsanta/social-network/backend/feed-service/api/proto";

import "protobuf/src/google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post) {
    option (google.api.http) = {
      post: "/v1/posts"
      body: "*"
    };
  }
  
  rpc GetPost (GetPostRequest) returns (Post) {
    option (google.api.http) = {
      get: "/v1/posts/{id}"
    };
  }
  
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse) {
    option (google.api.http) = {
      get: "/v1/posts"
    };
  }
  
  rpc GetPostsByPostIds (GetPostsByIdsRequest) returns (GetPostsResponse) {
    option (google.api.http) = {
      get: "/v1/posts/ids"
      body: "*"
    };
  }
  
  rpc GetPostsByUserId (GetPostsByUserRequest) returns (GetPostsResponse) {
    option (google.api.http) = {
      get: "/v1/posts/user/{id}"
    };
  }
  
  rpc GetPostsByUserIds (GetPostsByUsersRequest) returns (GetPostsResponse) {
    option (google.api.http) = {
      get: "/v1/posts/users"
      body: "*"
    };
  }
}

message CreatePostRequest {
  string caption = 1;
  string imageURL = 2;
  string userId = 3;
}

message Post {
  int64 id = 1;
  string caption = 2;
  string imageURL = 3;
  string userId = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp deletedAt = 6;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostsRequest {}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostsByIdsRequest {
  repeated int64 postIds = 1;
}

message GetPostsByUserRequest {
  string id = 1;
}

message GetPostsByUsersRequest {
  repeated string userIds = 1;
  int32 offset = 2;
  int32 limit = 3;
}
